[gd_scene load_steps=5 format=3 uid="uid://coypgt0d6bj26"]

[ext_resource type="Script" uid="uid://dkvb08t5i4b8a" path="res://Lab/DinoRun/DinoRun.gd" id="1_tqvxc"]
[ext_resource type="Texture2D" uid="uid://o834wpmisl15" path="res://Lab/BulletHell/Assets/parralax/sky.png" id="2_i4ny8"]
[ext_resource type="PackedScene" uid="uid://bmssbkevfv3ft" path="res://Game/Scenes/PlayerEntityTemplate-PlatformerDup.tscn" id="6_rv68b"]
[ext_resource type="PackedScene" uid="uid://dmeuf3uvumn5g" path="res://Lab/DinoRun/Scenes/Floor.tscn" id="7_lkn3h"]

[node name="DinoRun" type="Node2D"]
script = ExtResource("1_tqvxc")

[node name="Obstacles" type="Node" parent="."]

[node name="Player-Platformer" parent="." instance=ExtResource("6_rv68b")]
position = Vector2(24, 248)

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(320, 180)
scale = Vector2(0.333, 0.333)
texture = ExtResource("2_i4ny8")

[node name="Floor" parent="." instance=ExtResource("7_lkn3h")]

[node name="Obstacle" type="Marker2D" parent="."]
position = Vector2(448, 256)

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 2.3
autostart = true

[connection signal="timeout" from="ObstacleTimer" to="." method="onObstacleTimer_timeout"]
